--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node server.js",
+    "build": "ng build --aot --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,9 +21,11 @@
     "@angular/router": "~10.0.2",
     "bootstrap": "^4.5.0",
     "date-fns": "^2.14.0",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.5",
+    "serve-favicon": "^2.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -46,5 +48,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
+  },
+  "engines": {
+    "node": "14.5.0",
+    "npm": "6.14.5"
   }
 }
